# serializer version: 1
# name: test_frame_when_compact_layout_on_short_console_does_show_sample_count
  '⠋ sample 1/3                          0% · bench · 0:00:00 estimating time left…'
# ---
# name: test_frame_when_mid_run_with_computed_eta_does_show_detail_line
  '''
  sampling ━━━━━━━━━━━━━                            1/3 0:00:11 ~20s left
  round 2 · running 0:00 · last pass 10s
  '''
# ---
# name: test_frame_when_multi_target_compare_does_name_running_target
  '''
  sampling                                      0/10 0:00:00 estimating time left…
  round 1 · candidate · running 0:00
  '''
# ---
# name: test_frame_when_prepare_done_and_first_pass_running_does_show_pending_eta
  '''
    ✔ bench 0:00:02
  sampling                                       0/3 0:00:00 estimating time left…
  round 1 · running 0:00
  '''
# ---
# name: test_frame_when_prepare_running_does_show_spinner_and_label
  '⠋ bench 0:00:00'
# ---
# name: test_plain_renderer_when_pass_finished_does_print_exact_timestamped_line
  '[00:00:00] pass 1/3 · bench (20s)'
# ---
# name: test_stop_when_compare_done_does_print_summary
  '✔ compared 2 targets · 2 samples · 45s (prepare 1s)'
# ---
# name: test_stop_when_measure_done_does_print_summary
  '✔ measured bench · 2 samples · 23s (prepare 1s)'
# ---
